Fix overflow on login/signup mobile views

--- a/server/styles/style.css
+++ b/server/styles/style.css
@@ -148,18 +148,27 @@ a#logo {
 .welcome, .login, .signup {
   grid-area: content;
 
-  padding: 4rem;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.welcome {
   display: flex;
   flex-direction: column;
-  align-items: center;
 
-  box-sizing: border-box;
+  padding: 4rem;
 }
 
 
 /* Login & Signup pages  */
 .login, .signup {
+  display: grid;
   justify-content: center;
+  grid-template:
+    ". . ." 1fr
+    ". form ." auto
+    ". . ." 1fr
+    / 1fr auto 1fr;
 }
 
 .error {
@@ -167,13 +176,14 @@ a#logo {
 }
 
 :is(.login, .signup) > form {
+  grid-area: form;
+
   display: flex;
   flex-direction: column;
   gap: .75rem;
 
-  padding: 6rem 4rem;
+  padding: 6rem min(15vw, 4rem);
   border-radius: 1rem;
-  aspect-ratio: 1/1.25;
 
   background-color: white;
   color: var(--black);
